# neuroforge

./: .gitignore  README.md  USER_MANUAL.md
data/patient_corpus/: README.md
docs/: V4_AGENTS_AND_RAG.md
scripts/: init.bat  init.py  once.bat  once.sh  run_api.bat  run_api.sh  run_web.bat  run_web.sh  seed.bat  seed.sh
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/briefing/: __init__.py  generator.py  hypothesis.py  synopsis.py
services/api/app/connectors/: __init__.py  base.py  biorxiv.py  clinicaltrials.py  europe_pmc.py  fringe.py  hackernews.py  nih_reporter.py  openalex.py  openfda.py  pubmed.py  reddit.py  rss.py  uspto_patents.py  who_ictrp.py
services/api/app/db/: __init__.py  persist.py  schema.py
services/api/app/grading/: __init__.py  grade.py
services/api/app/ontology/: __init__.py  interventions.py  targets.py
services/api/app/routers/: __init__.py  corpus.py  init_status.py  research.py
services/api/app/safety/: __init__.py  screen.py
services/api/app/scheduler/: __init__.py  runner.py  telemetry.py
services/api/app/seed/: __init__.py  extractor.py  ingest.py  patient_profile.py
web/: next.config.js  package-lock.json  package.json
web/components/: BriefingView.tsx  CorpusPanel.tsx  Header.tsx  HypothesisBar.tsx  InitScreen.tsx  PanelHeader.tsx  ProfilePanel.tsx  Scatter.tsx  Sidebar.tsx  TelemetryPanel.tsx
web/lib/: api.ts  filters.ts  markdown.tsx
web/pages/: _app.tsx  index.tsx
web/styles/: globals.css  tokens.ts
